--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
         <div class="topnav">
             <a href="/">Home</a>
             <a href="">Boards</a>
-            <a href="">About</a>
+            <a href="">Archives</a>
             <a href="" style="float:right; margin-right: 20px;">Sign In</a>
         </div>
 
