--- a/templates/index.html
+++ b/templates/index.html
@@ -13,11 +13,13 @@
         <div class="post_info"><b style="font-weight:1000;">STICKIED</b></div>
         <table>
         {% if stickies|length < 1 %}
-        <tr class="stickies"><td>Not Implemented Yet</td></tr>
+        <tr class="stickies"><td>There are no stickies</td></tr>
         {% else %}
                 {% for sticky in stickies %}
                     <tr class="stickies">
-                        <td onclick="location.href='/t/{{thread['_id']}}'"><a style="display:inline-block; margin-bottom:2px;" href="/t/{{thread['_id']}}"><b>{{ thread['title'] }}</b></a><p style="font-size:small; margin-top:0px; margin-bottom:0px;">Posted on {{ thread['formattedDate'] }} · {% if thread['posts'] == 1 %} {{ thread['posts'] }} post {% else %} {{ thread['posts'] }} posts {% endif %}</p><p style="font-size:small; margin-top:0px; margin-bottom:2px;">Last updated: {{ thread['formattedLastUpdated'] }}</p></td>
+                        <td onclick="location.href='/t/{{sticky['_id']}}'"><a style="color:yellow; display:inline-block; margin-bottom:2px;" href="/t/{{sticky['_id']}}"><b>{{ sticky['title'] }}</b></a><p style="font-size:small; margin-top:0px; margin-bottom:0px;">Posted on {{ sticky['formattedDate'] }} · {% if sticky['posts'] == 1 %} {{ sticky['posts'] }} post {% else %} {{ sticky['posts'] }} posts {% endif %}</p><p style="font-size:small; margin-top:0px; margin-bottom:2px;">Last updated: {{ sticky['formattedLastUpdated'] }}</p></td>
+                        {% if current_user.username in mods%}<td  onclick="location.href='/unsticky/{{sticky['_id']}}'" style = "text-align: center; width:10px; padding:5px;"><a style="color:yellow;" href = "/unsticky/{{sticky['_id']}}">UN-STICKY</a></td>{% else %}{% endif %}
+                        {% if current_user.username in mods%}<td  onclick="location.href='/delete/{{sticky['_id']}}'" style = "text-align: center; width:10px; padding:5px;"><a style="color:yellow;" href = "/delete/{{sticky['_id']}}">REMOVE</a></td>{% else %}{% endif %}
                     </tr>
                 {% endfor %}
         {% endif %}
@@ -34,7 +36,7 @@
                 {% else %}
                     {% for daily in dailies %}
                         <tr class="dailies">
-                            <td onclick="location.href='/t/{{thread['_id']}}'"><a style="display:inline-block; margin-bottom:2px;" href="/t/{{thread['_id']}}"><b>{{ daily['title'] }}</b></a><p style="font-size:small; margin-top:0px; margin-bottom:0px;">Posted on {{ daily['formattedDate'] }} · {% if daily['posts'] == 1 %} {{ daily['posts'] }} post {% else %} {{ daily['posts'] }} posts {% endif %}</p><p style="font-size:small; margin-top:0px; margin-bottom:2px;">Last updated: {{ daily['formattedLastUpdated'] }}</p></td>
+                            <td onclick="location.href='/t/{{daily['_id']}}'"><a style="color:greenyellow; display:inline-block; margin-bottom:2px;" href="/t/{{daily['_id']}}"><b>{{ daily['title'] }}</b></a><p style="font-size:small; margin-top:0px; margin-bottom:0px;">Posted on {{ daily['formattedDate'] }} · {% if daily['posts'] == 1 %} {{ daily['posts'] }} post {% else %} {{ daily['posts'] }} posts {% endif %}</p><p style="font-size:small; margin-top:0px; margin-bottom:2px;">Last updated: {{ daily['formattedLastUpdated'] }}</p></td>
                         </tr>
                     {% endfor %}
                 {% endif %}
@@ -54,6 +56,8 @@
                     {% for thread in threads %}
                         <tr class="threads">
                             <td onclick="location.href='/t/{{thread['_id']}}'"><a style="display:inline-block; margin-bottom:2px;" href="/t/{{thread['_id']}}"><b>{{ thread['title'] }}</b></a><p style="font-size:small; margin-top:0px; margin-bottom:0px;">Posted on {{ thread['formattedDate'] }} · {% if thread['posts'] == 1 %} {{ thread['posts'] }} post {% else %} {{ thread['posts'] }} posts {% endif %}</p><p style="font-size:small; margin-top:0px; margin-bottom:2px;">Last updated: {{ thread['formattedLastUpdated'] }}</p></td>
+                            {% if current_user.username in mods%}<td  onclick="location.href='/sticky/{{thread['_id']}}'" style = "text-align: center; width:10px; padding:5px;"><a href = "/sticky/{{thread['_id']}}">STICKY</a></td>{% else %}{% endif %}
+                            {% if current_user.username in mods%}<td  onclick="location.href='/delete/{{thread['_id']}}'" style = "text-align: center; width:10px; padding:5px;"><a href = "/delete/{{thread['_id']}}">REMOVE</a></td>{% else %}{% endif %}
                         </tr>
                     {% endfor %}
                 {% endif %}
